--- a/appz.yml
+++ b/appz.yml
@@ -20,4 +20,8 @@ deploy:
 properties:
   MYSQL_ROOT_PASSWORD:
     vault: MYSQL_ROOT_PASSWORD_KEY
+  MYSQL_SPRINGBOOTWEB_PASSWORD:
+    vault: MYSQL_SPRINGBOOTWEB_PASSWORD
+  MYSQL_WORDPRESS_PASSWORD:
+    vault: MYSQL_WORDPRESS_PASSWORD
   revision : 10
