--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
     app:
         name: MySQL
         code: mysql
-        notify: svengathattil@ecloudcontrol.com
+        notify: mniju@ecloudcontrol.com
 
     build:
         version: 5.7
@@ -11,7 +11,7 @@
         image_template: mysql-5.7
 
     deploy:
-        context: sidharth-v/DEV
+        context: minnaniju/DEV
         type: statefulset
         replicas: 1
         ingress: none
