--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
     app:
-        name: MySQLa
-        code: mysqla
-        notify: svengathattil@ecloudcontrol.com
+        name: MySQL
+        code: mysql
+        notify: mniju@ecloudcontrol.com
 
     build:
         version: 5.7
@@ -21,7 +21,7 @@
 
     volumes:
       - claim: mysql-data
-        mount: /var/lib/mysqla
+        mount: /var/lib/mysql
         name: data
         size: 5Gi
       - claim: mysql-backup
